--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proyectobd",
   "version": "1.0.0",
   "description": "Proyecto para crear app con Electron",
-  "main": "./src/js/main.js",
+  "main": "./client/src/js/main.js",
   "scripts": {
     "start": "electron-forge start",
     "test": "echo \"Error: no test specified\" && exit 1",
